<resources>
    <string name="CHINESE_ID_CARD_DIGITS">0123456789xX</string>
    <string name="CMONEY">C-Money</string>
    <string name="DELETE">Delete</string>
    <string name="GOOGLE_PLACES_API_KEY">AIzaSyAXxkUmgfmQBAU6KDxXAcSm8XMNRXNp0Jk</string>
    <string name="KM">km</string>
    <string name="LANGUAGE_DE">Deutsch</string>
    <string name="LANGUAGE_EN">English</string>
    <string name="LANGUAGE_ES">Español</string>
    <string name="LANGUAGE_FR">Français</string>
    <string name="LANGUAGE_JA">日本語</string>
    <string name="LANGUAGE_KO">한국어</string>
    <string name="LANGUAGE_RU">Pусский</string>
    <string name="LANGUAGE_ZH">繁體中文</string>
    <string name="MI">mi</string>
    <string name="OPEN_TIPS1">"Copyright 2006–2010 The Apache Software Foundation.
Licensed under the Apache License, Version 2.0.

http://www.apache.org/licenses/LICENSE-2.0 

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="OPEN_TIPS2">"Copyright 2011–2014 Sergey Tarasevich.
Licensed under the Apache License, Version 2.0.

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="OPEN_TIPS3">"Permission to use, copy, modify, and/or distribute this software for any purpose with or without fee is hereby granted, provided that this permission notice appear in all copies.

THE SOFTWARE IS PROVIDED \"AS IS\" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE."</string>
    <string name="OPEN_TIPS4">"This product includes software developed by Joda.org (http://www.joda.org/).

Licensed under the Apache License, Version 2.0

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="OPEN_TIPS5">"Copyright 2014 Emil Sjölander.
Licensed under the Apache License, Version 2.0.

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="OPEN_TIPS6">"Copyright 2012–2014 Jeremy Feinstein.
Licensed under the Apache License, Version 2.0

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="OPEN_TIPS7">"Copyright 2012 Jake Wharton.
Licensed under the Apache License, Version 2.0.

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="OPEN_TIPS8">"Copyright 2011 Yuri Kanivets.
Licensed under the Apache License, Version 2.0.

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="PASSPORT_DIGITS">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="TEMPERATURE">℃</string>
    <string name="UNIT_KM">km</string>
    <string name="UNIT_MI">mi</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us">About us</string>
    <string name="about_us_1">Flight and hotel booking in the palm of your hand</string>
    <string name="about_us_2">"China's Leading Online Travel Agent"</string>
    <string name="about_us_3">60,000,000 members</string>
    <string name="about_us_4">2,500,000 real user reviews</string>
    <string name="about_us_5">235,000 hotels in 173 countries</string>
    <string name="about_us_6">Low Price Guarantee on China hotels</string>
    <string name="about_us_7">Safe, secure payment options</string>
    <string name="about_us_8">Award-winning Customer Service</string>
    <string name="about_us_9">"Ctrip.com is China's leading online travel agent, serving customers in China and around the world in eight different languages."</string>
    <string name="accept">Accept</string>
    <string name="account">Account</string>
    <string name="account_hint">Username/Phone number/Email</string>
    <string name="actual_carrier">● Actual carrier (Codeshare)</string>
    <string name="add_a_passenger">Add a passenger</string>
    <string name="add_a_traveler">Add a traveler</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="add_to_calendar_failed">There was an issue accessing your calendar.</string>
    <string name="add_to_calendar_success">Your booking was successfully added to your calendar.</string>
    <string name="adult_tickets_only">(Adult tickets only)</string>
    <string name="adurl">http://pages.english.ctrip.com/mobile/ads/adandroid_v2</string>
    <string name="aircraft_type">Aircraft type:</string>
    <string name="airfare">Airfare</string>
    <string name="airline">Airline</string>
    <string name="airport">Airport</string>
    <string name="airport_nearby">Nearby airports</string>
    <string name="airport_nearby_no_data">No nearby airports.</string>
    <string name="airport_nearby_search_failed">Nearby airports search failed.</string>
    <string name="app_name">Ctrip</string>
    <string name="apply">Apply</string>
    <string name="area">Area</string>
    <string name="arrival_city">To</string>
    <string name="arrival_gate">Arrival Gate</string>
    <string name="arrival_time">Arrival time</string>
    <string name="baggage">Baggage carousel number</string>
    <string name="baggage_restrictions">● Baggage restrictions</string>
    <string name="basic_info">Basic information</string>
    <string name="bedding">Bedding:</string>
    <string name="birth">Date of birth</string>
    <string name="boarding_gate">Boarding Gate</string>
    <string name="book">Book</string>
    <string name="book_room_tips">Only one guest name should be entered for one room.</string>
    <string name="breakfast_included">%d breakfast(s) included</string>
    <string name="breakfast_is_included">with breakfast</string>
    <string name="breakfast_not_included">no breakfast</string>
    <string name="business">Business</string>
    <string name="calendar_flight_tips">Please check in for your flight on time. %1$s, %2$s (Departing: %3$s)</string>
    <string name="calendar_hotel_tips">Please check in to your hotel on time. %1$s, (%2$s)</string>
    <string name="call">Call</string>
    <string name="call_hongkong">HongKong +852-3610-6666</string>
    <string name="call_hotel">Call hotel?</string>
    <string name="call_international">International +86-513-8918-6110</string>
    <string name="call_mainland_china">Mainland China 400-920-6662</string>
    <string name="call_taiwan">TaiWan +886-2-5580-3988</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_order">Cancel order</string>
    <string name="cancel_order_failed">Cancelation failed. Please try again or contact us for help.</string>
    <string name="cancel_order_message">Are you sure you want to cancel this reservation?</string>
    <string name="cancel_order_success">Order canceled successfully!</string>
    <string name="cancellation">Cancellation</string>
    <string name="cannot_auto_locate">We cannot auto-locate you. Please select your city manually.</string>
    <string name="cardholder_name">Cardholder name</string>
    <string name="change_conditions">● Change conditions</string>
    <string name="change_room_date">Change room/date</string>
    <string name="check_in">Check-in</string>
    <string name="check_in_check_out">Check in &amp; check out</string>
    <string name="check_in_counter">Check-in counter</string>
    <string name="check_in_is_out_of_date">The check-in date cannot be earlier than today’s date. Please select again.</string>
    <string name="contact_us">Contact us</string>
    <string name="delete_traveller">"Delete traveler's info"</string>
    <string name="done">Done</string>
    <string name="first_name_required">First name (required)</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="full_name_in_chinese">Full name in chinese</string>
    <string name="gender">Gender</string>
    <string name="id">ID</string>
    <string name="identity_type">Type</string>
    <string name="last_name_required">Last name (required)</string>
    <string name="middle_name">Middle name (optional)</string>
    <string name="name">Name</string>
    <string name="nationality">Nationality</string>
    <string name="number">Number</string>
    <string name="password">Password</string>
    <string name="phone_number">86 400 920 6662</string>
    <string name="results_failed">Please check your network setting or try again.</string>
    <string name="retry">Retry</string>
    <string name="sign_in">Sign in</string>
    <string name="skip_sign_in">Skip sign-in</string>
</resources>