<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/color_efefef" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_horizontal" android:background="@drawable/icon_logo_ctrip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" />
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
                <TextView android:textSize="@dimen/font_size_medium" android:textStyle="bold" android:textColor="@color/color_333333" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_us_1" />
                <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_333333" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_5" android:text="@string/about_us_2" />
                <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_333333" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_5" android:text="@string/about_us_3" />
                <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_333333" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_5" android:text="@string/about_us_4" />
                <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_333333" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_5" android:text="@string/about_us_5" />
                <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_333333" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_5" android:text="@string/about_us_6" />
                <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_333333" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_5" android:text="@string/about_us_7" />
                <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_333333" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_5" android:text="@string/about_us_8" />
                <View android:layout_margin="@dimen/margin_20" style="@style/line_h" />
                <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_333333" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_us_9" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>