<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/color_efefef" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_gray_15" android:padding="@dimen/margin_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" />
        <View style="@style/line_h" />
        <LinearLayout android:orientation="vertical" android:id="@id/traveller_basic_info_english_name_layout" android:background="@color/color_ffffff" android:paddingLeft="@dimen/margin_10" android:paddingRight="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/margin_10" android:paddingEnd="0.0dip">
            <LinearLayout android:orientation="vertical" android:id="@id/ll_first_name" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:textColor="@color/color_333333" android:textColorHint="@color/color_dddddd" android:id="@id/et_first_name" android:background="@color/color_transparent" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_marginRight="@dimen/margin_10" android:hint="@string/first_name_required" android:imeOptions="actionNext" android:layout_marginEnd="@dimen/margin_10" style="@style/BaseInput" />
                <View style="@style/line_h" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/ll_middle_name" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:textColor="@color/color_333333" android:textColorHint="@color/color_dddddd" android:id="@id/et_middle_name" android:background="@color/color_transparent" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_marginRight="@dimen/margin_10" android:hint="@string/middle_name" android:imeOptions="actionNext" android:layout_marginEnd="@dimen/margin_10" style="@style/BaseInput" />
                <View style="@style/line_h" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/ll_last_name" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:textColor="@color/color_333333" android:textColorHint="@color/color_dddddd" android:id="@id/et_last_name" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_marginRight="@dimen/margin_10" android:hint="@string/last_name_required" android:imeOptions="actionNext" android:layout_marginEnd="@dimen/margin_10" style="@style/BaseInput" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/ll_chinese_name" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textColor="@color/color_333333" android:textColorHint="@color/color_dddddd" android:id="@id/et_chinese_name" android:paddingLeft="@dimen/margin_10" android:paddingRight="@dimen/margin_10" android:layout_width="fill_parent" android:hint="@string/full_name_in_chinese" android:paddingStart="@dimen/margin_10" android:paddingEnd="@dimen/margin_10" style="@style/BaseInput" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/traveller_basic_info_all_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/ll_basic_title_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View style="@style/line_h" />
                <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_gray_15" android:padding="@dimen/margin_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/basic_info" />
                <View style="@style/line_h" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/traveller_basic_info_form_layout" android:background="@color/color_ffffff" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@id/ll_country" android:background="@drawable/selector_btn_4" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClickCountry">
                    <TextView android:id="@id/tv_country" android:hint="@string/nationality" style="@style/ClickActionItem" />
                    <View android:id="@id/line_traveller_nationality" style="@style/line_h_margin_left_10" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/ll_date_of_birth" android:background="@drawable/selector_btn_4" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClickBirthDay">
                    <TextView android:id="@id/tv_birthday_text" android:hint="@string/birth" style="@style/ClickActionItem" />
                    <View style="@style/line_h_margin_left_10" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/ll_gender" android:background="@drawable/selector_btn_4" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClickGender">
                    <TextView android:id="@id/tv_gender" android:hint="@string/gender" style="@style/ClickActionItem" />
                </LinearLayout>
            </LinearLayout>
            <View style="@style/line_h" />
        </LinearLayout>
        <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_gray_15" android:padding="@dimen/margin_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/id" />
        <View style="@style/line_h" />
        <LinearLayout android:orientation="vertical" android:id="@id/ll_id_card" android:background="@drawable/selector_btn_4" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClickIDCardType">
            <TextView android:id="@id/tv_id_card_type" android:hint="@string/identity_type" style="@style/ClickActionItem" />
            <View style="@style/line_h_margin_left_10" />
        </LinearLayout>
        <EditText android:id="@id/et_id_card" android:layout_width="fill_parent" android:hint="@string/number" android:digits="@string/PASSPORT_DIGITS" android:inputType="numberSigned" android:imeOptions="actionNext" android:paddingStart="@dimen/margin_10" android:paddingEnd="@dimen/margin_10" style="@style/BaseInput" />
        <View style="@style/line_h" />
        <Button android:textSize="@dimen/font_size_36" android:textStyle="bold" android:textColor="@color/color_ffffff" android:layout_gravity="center_horizontal" android:background="@drawable/selector_btn_1" android:paddingLeft="@dimen/margin_20" android:paddingRight="@dimen/margin_20" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/button_height_60" android:layout_margin="@dimen/margin_15" android:text="@string/done" android:onClick="onClickDone" />
    </LinearLayout>
</ScrollView>