<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/color_gray_2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/margin_10" android:layout_marginRight="@dimen/margin_10">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_warning" />
        <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_gray_3" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_item_height" android:text="@string/results_failed" />
        <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_333333" android:gravity="center" android:id="@id/tv_retry" android:background="@drawable/selector_bg_btn_white_br" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="30.0dip" android:text="@string/retry" />
        <ImageView android:background="@color/color_gray_3" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_gray_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/contact_us" />
        <TextView android:textSize="@dimen/font_size_medium" android:textColor="@color/color_333333" android:gravity="center" android:id="@id/tv_call" android:background="@drawable/selector_bg_btn_white_br" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="30.0dip" android:text="@string/phone_number" />
    </LinearLayout>
</LinearLayout>